// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots UI/MultiTypeahead Multi 1`] = `
<div
  class="simple-typeahead"
  id="multi_wrapper"
>
  <div
    class="flex simple-typeahead-wrapper"
  >
    
    
    <input
      autocomplete="off"
      class="simple-typeahead-input"
      id="multi"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots UI/MultiTypeahead Multiple 1`] = `
<div
  class="simple-typeahead"
  id="multiple_wrapper"
>
  <div
    class="flex simple-typeahead-wrapper"
  >
    
    
    <input
      autocomplete="off"
      class="simple-typeahead-input"
      id="multiple"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <!--v-if-->
</div>
`;

exports[`Automated Storybook Snapshots UI/MultiTypeahead With Initial Items 1`] = `
<div
  class="simple-typeahead"
  id="multiple_wrapper"
>
  <div
    class="flex simple-typeahead-wrapper"
  >
    
    <button
      class="bg-neutral chip p-xxs pl-m pr-m mr-xs"
    >
      titreItem1 
      <span>
        x
      </span>
    </button>
    <button
      class="bg-neutral chip p-xxs pl-m pr-m mr-xs"
    >
      Not In items 
      <span>
        x
      </span>
    </button>
    <button
      class="bg-neutral chip p-xxs pl-m pr-m mr-xs"
    >
      titreItem2 
      <span>
        x
      </span>
    </button>
    
    <input
      autocomplete="off"
      class="simple-typeahead-input"
      id="multiple"
      placeholder="placeholder"
      type="text"
    />
  </div>
  <!--v-if-->
</div>
`;
